# marks_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  loader.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: __main__.py  loader.py
app/data/: config.py
app/filters/: __init__.py
app/handlers/errors/: error_handler.py
app/handlers/groups/: notifications.py
app/handlers/users/: __init__.py  help.py  marks.py  start.py
app/keyboards/inline/: __init__.py  marks_callback.py  marks_keyboard.py  subject_callback.py  subject_keyboard.py
app/middlewares/: __init__.py  throttling.py
app/utils/: __init__.py  diary_parser.py  notify_admins.py  set_bot_commands.py  table_parser.py
app/utils/misc/: logging.py
data/: config.py
filters/: __init__.py
handlers/groups/: __init__.py  notifications.py
handlers/users/: __init__.py  help.py  marks.py  start.py
keyboards/inline/: __init__.py  marks_callback.py  marks_keyboard.py  subject_callback.py  subject_keyboard.py
middlewares/: throttling.py
utils/: __init__.py  dairy.html  dairy_parser.py  diary_parser.py  marks_parser.py  set_bot_commands.py  table_parser.py
utils/misc/: logging.py
